<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_back"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/dimen_25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sel_language_en"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_22x"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sel_language_hi"
            android:visibility="gone"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sel_language_or"
            android:visibility="gone"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/comment_box"
                android:text="@string/english" />

            <Button
                android:id="@+id/btnHindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/comment_box"
                android:text="@string/hindi" />


            <Button
                android:id="@+id/btnOriya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/comment_box"
                android:text="@string/oriya" />


        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/comment_box"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/strContinue" />

    </LinearLayout>


</LinearLayout>