<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_back_lang"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sel_language_en"
        android:textColor="@color/primary"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sel_language_hi"
        android:textColor="@color/primary"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/comment_box"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/english" />

        <Button
            android:id="@+id/btnMarathi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/comment_box"
            android:text="@string/hindi" />

    </LinearLayout>


    <Button
        android:id="@+id/btnContinue"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/primary_dark"
        android:text="Continue"
        android:textColor="@color/white" />

</LinearLayout>