<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <LinearLayout
            android:id="@+id/lyt_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/progerss_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/greytext"
                android:textSize="@dimen/text_size_20x"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_indeterminate"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:indeterminate="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_request_issue_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/lv_history"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:divider="@null">

                </ListView>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_request_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/submission_tick" />

            <TextView
                android:id="@+id/tv_customerIssueId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Token No : #12345678"
                android:textColor="@color/accent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/request_issue_succesfull"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/thanks_feedback" />


        </LinearLayout>


        <include layout="@layout/lay_bottom_navigationbar"/>


    </LinearLayout>

</LinearLayout>